[package]
name = "tensor-rs"
description = "A zero-dependency tensor library for Rust"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
small-vec = { workspace = true}
